# knowledge_map

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260517_0001_initial.py  20260518_0002_message_next_actions.py  20260519_0003_message_highlights.py  20260522_0004_message_peeks.py  20260522_0005_learning_background.py  20260523_0006_message_search_sources.py  20260524_0007_auth_and_settings.py  20260524_0008_prompt_templates.py  20260525_0009_unify_llm_settings.py  20260530_add_is_fundamental.py  20260530_add_prerequisite_ids.py  20260530_fp_edge_explanations.py  20260603_add_context_summary.py  20260603_add_llm_usage_events.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  sse.py
app/db/: __init__.py  base.py  models.py
app/routers/: auth.py  deps.py  health.py  messages.py  nodes.py  prompts.py  sessions.py  settings.py  web_search.py
app/schemas/: __init__.py  auth.py  common.py  message.py  node.py  prompt.py  session.py  settings.py  web_search.py
app/services/: __init__.py  ai.py  anysearch.py  auth.py  knowledge.py  prompt_defaults.py  prompt_store.py  settings_store.py  topics.py  web_search.py  web_search_daemon.py
docker/: app.Dockerfile  entrypoint.sh  open-websearch.Dockerfile
scripts/: migrate_sqlite_to_postgres.py  smoke_test.sh
static/: app.js  index.html  styles.css
tests/: conftest.py  test_context_optimization.py  test_health.py  test_intent.py  test_nodes.py  test_peeks.py  test_search_query.py  test_sessions.py
